@@ -6,6 +6,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilog-Perl 3.481 devel
 
+****  Fix t/03_spaces.t test for Debian (#1675). [Gregor Herrmann]
+
 
 * Verilog-Perl 3.480 2022-09-01
 
